<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.alexaat.randomdice.fragments.TitleFragment"
        android:label="@string/title_fragment_label" >
        <action
            android:id="@+id/action_titleFragment_to_diceListFragment"
            app:destination="@id/diceListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/diceListFragment"
        android:name="com.alexaat.randomdice.fragments.DiceListFragment"
        android:label="@string/dice_list_fragment_label" >
        <action
            android:id="@+id/action_diceListFragment_to_gameOverFragment"
            app:destination="@id/gameOverFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/titleFragment" />
        <action
            android:id="@+id/action_diceListFragment_to_gameWonFragment"
            app:destination="@id/gameWonFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameOverFragment"
        android:name="com.alexaat.randomdice.fragments.GameOverFragment"
        android:label="@string/game_over_fragment_label" >
        <action
            android:id="@+id/action_gameOverFragment_to_diceListFragment"
            app:destination="@id/diceListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameWonFragment"
        android:name="com.alexaat.randomdice.fragments.GameWonFragment"
        android:label="@string/game_won_fragment_label" >
        <action
            android:id="@+id/action_gameWonFragment_to_diceListFragment"
            app:destination="@id/diceListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.alexaat.randomdice.fragments.AboutFragment"
        android:label="@string/about_fragment_label"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.alexaat.randomdice.fragments.RulesFragment"
        android:label="@string/rules_fragment_label"
        tools:layout="@layout/fragment_rules" />
</navigation>